--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+guideos-energy-tool (1.1) unstable; urgency=medium
+
+  * Fixed: Creat Desktop File
+
+ -- Actionschnitzel <actionschnitzel@guideos.de>  Wed, 18 Jun 2025 21:23:05 +0200
+
 guideos-energy-tool (1.0) unstable; urgency=medium
 
   * Initial release.
